# react-flow-testbed

./: .env  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci-cd.yml
backend/: app.py  database.py  flows.db
public/: index.html  manifest.json
scripts/: start-dev.sh
src/: App.css  App.js  index.css
src/components/: BasicFlow.js  NodeRegistry.js
src/components/nodes/: CustomNode.js
src/utils/: api.js  flowValidator.js
utils/: flow_parser.py
